Fix UI scrolling

--- a/client-side/src/app/components/data-index/data-index.component.html
+++ b/client-side/src/app/components/data-index/data-index.component.html
@@ -20,7 +20,7 @@
 
 <div class="main-content">
     <div class="content">
-         <mat-tab-group #tabGroup animationDuration="0ms" class="fixed-header">
+         <mat-tab-group #tabGroup animationDuration="0ms">
             <mat-tab label="{{ 'Data_index_all_activities' | translate}}">
                     <ng-template matTabContent>
                         <div class="pepperi-border-bottom section-title">
