--- a/client-side/src/app/components/data-index/data-index.component.scss
+++ b/client-side/src/app/components/data-index/data-index.component.scss
@@ -12,14 +12,14 @@
            
     } 
     .section-title {
-        position: fixed;
-        width: 100%;
+        //position: fixed;
+       // width: 100%;
         height: 4.75rem;
         background-color: #fff;
         z-index: 9999;
         grid-row: 1;
         padding-top: .75rem;
-        margin-top: -1rem;
+        //margin-top: -1rem;
 
             h4 {
                 margin-bottom: 1rem;
@@ -29,7 +29,7 @@
 
     #fields-container{
         grid-row: 2;
-        padding-top: 5rem;
+        padding-top: 1rem;
 
         .fieldRow{
 
